Fix Weird Body Overflow

--- a/source/scss/_contextmenu.scss
+++ b/source/scss/_contextmenu.scss
@@ -5,6 +5,7 @@
 	right: 0;
 	bottom: 0;
 	z-index: 100;
+	overflow: hidden;
 
 	&.hide {
 		opacity: 0;
